firmware/defmt-test/macros/tests/ui/teardown-has-invalid-function-signature.stderr
error: `#[teardown]` function must have signature `fn(state: &mut Type)` (parameter is optional)
 --> tests/ui/teardown-has-invalid-function-signature.rs:6:8
  |
6 |     fn hello(a: i32, b: i32) -> i32 {
  |        ^^^^^
